--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         <div class="container">
             <div class="hero-content text-center">
                 <div class="profile-image-container">
-                 <img src="youssef.jpg" alt="youssef">
+                 <img src="images/youssef.JPG" alt="youssef">
  
                 </div>
                 <h1 class="fade-in-up">Youssef El Ghandour</h1>
