--- a/index.html
+++ b/index.html
@@ -345,8 +345,7 @@
         <div class="container">
             <div class="hero-content text-center">
                 <div class="profile-image-container">
-                 <img src="images/youssef.JPG" alt="youssef">
- 
+            <img src="images/youssef.JPG" alt="Youssef El Ghandour">
                 </div>
                 <h1 class="fade-in-up">Youssef El Ghandour</h1>
                 <h2 class="fade-in-up">Mobile App Developer | Flutter & Android</h2>
@@ -386,11 +385,16 @@
                         <span class="skill-badge">CI/CD</span>
                     </div>
 
+                    <h4 class="mt-5 mb-3">Education</h4>
+                    <ul class="list-unstyled">
+                        <li class="mb-3"><i class="fas fa-graduation-cap text-primary me-2"></i> B.Sc. Computer Science – Arab Academy for Science, Technology & Maritime Transport (2014–2018)</li>
+                        <li class="mb-3"><i class="fas fa-graduation-cap text-primary me-2"></i> American Diploma – Nermine Ismail Schools (2013)</li>
+                    </ul>
+
                     <h4 class="mt-5 mb-3">Experience Highlights</h4>
                     <ul class="list-unstyled">
                         <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i> Mobile Apps Developer at Schaduf (2023 - Present)</li>
                         <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i> Freelance Android & Flutter Developer (2019 - Present)</li>
-                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i> B.Sc. Computer Science - AASTMT (2014-2018)</li>
                     </ul>
                 </div>
             </div>
