--- a/index.html
+++ b/index.html
@@ -387,14 +387,16 @@
 
                     <h4 class="mt-5 mb-3">Education</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-3"><i class="fas fa-graduation-cap text-primary me-2"></i> B.Sc. Computer Science – Arab Academy for Science, Technology & Maritime Transport (2014–2018)</li>
+                        <li class="mb-3"><i class="fas fa-graduation-cap text-primary me-2"></i> B.Sc. Computer Science – Arab Academy for Science, Technology & Maritime Transport (2013–2018)</li>
                         <li class="mb-3"><i class="fas fa-graduation-cap text-primary me-2"></i> American Diploma – Nermine Ismail Schools (2013)</li>
                     </ul>
 
                     <h4 class="mt-5 mb-3">Experience Highlights</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i> Mobile Apps Developer at Schaduf (2023 - Present)</li>
-                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i> Freelance Android & Flutter Developer (2019 - Present)</li>
+                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i> DevOps Engineering Trainee – Digital Egypt Pioneers Initiative (DEPI) <span class="text-muted">(Dec 2025 – Present)</span></li>
+                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i> Mobile Application Developer – Schaduf <span class="text-muted">(Jun 2023 – Present)</span></li>
+                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i> Android Developer – Unique Software Ideas Community <span class="text-muted">(Sep 2021 – Sep 2022)</span></li>
+                        <li class="mb-3"><i class="fas fa-check-circle text-primary me-2"></i> Freelance Android & Flutter Developer <span class="text-muted">(Aug 2019 – Present)</span></li>
                     </ul>
                 </div>
             </div>
